adduser (3.96.0) UNRELEASED; urgency=low

  * NOT RELEASED YET

 -- Marc Haber <mh+debian-packages@zugschlus.de>  Mon, 31 Jul 2006 07:08:01 +0000

adduser (3.96) unstable; urgency=low

  * Update German (de) program and debconf translation.
    Thanks to Tobias Toedter. Closes: #378658, #378661
  * Update Swedish (sv) program and man page translation.
    Thanks to Daniel Nylander. Closes: #378692, #378770
  * Update Turkish (tr) debconf translation.
    Thanks to Erçin EKER. Closes: #378708
  * Update Korean (ko) debconf translation.
    Thanks to Sunjae Park. Closes: #378733
  * Update Czech (cs) program translation.
    Thanks to Miroslav Kure. Closes: #378766
  * Updated Ukrainian program translation. Thanks to
    Eugeniy Meshcheryakov. Closes: #378805
  * Updated Norwegian Bokmal program translation.
    Thanks to Hans Fredrik Nordhaug. Closes: #378969
  * Update Russian (ru) manpage and program translation.
    Thanks to Yuri Kozlov. Closes: #378748
  * Update Brazilian Portuguese (pt_BR) manpage translation. Thanks to
    Felipe Augusto van de Wiel.
  * Update Italian (it) program and manpage translations.
    Thanks to Luca Monducci. Closes: #379165
  * Update French (fr) manpage translation.
    Thanks to Nicolas François. Closes: #379394
  * Update French (fr) program translation.
    Thanks to Thomas Huriaux. Closes: #380070
  * Update Romanian (ro) debconf translation.
    Thanks to Eddy Petrişor. Closes: #378788

 -- Marc Haber <mh+debian-packages@zugschlus.de>  Mon, 31 Jul 2006 06:58:21 +0000

adduser (3.95) unstable; urgency=low

  * Apply Tobias' last patch correctly. This again Closes: #378539

 -- Marc Haber <mh+debian-packages@zugschlus.de>  Tue, 18 Jul 2006 05:33:02 +0000

adduser (3.94) unstable; urgency=low

  * More patches for program output.
    Thanks again to Tobias Toedter. Closes: #378539

 -- Marc Haber <mh+debian-packages@zugschlus.de>  Mon, 17 Jul 2006 16:26:25 +0000

adduser (3.93) unstable; urgency=low

  [ Marc Haber ]