@@ -1,8 +1,10 @@
 adduser (3.96.0) UNRELEASED; urgency=low
 
   * NOT RELEASED YET
+  * Don't show rpcinfo -p errors to the user.
+    Thanks to Michael Prokop. Closes: #381923
 
- -- Marc Haber <mh+debian-packages@zugschlus.de>  Mon, 31 Jul 2006 07:08:01 +0000
+ -- Marc Haber <mh+debian-packages@zugschlus.de>  Tue,  8 Aug 2006 09:07:58 +0000
 
 adduser (3.96) unstable; urgency=low
 
